clean up code
clean up code